@@ -16,15 +16,21 @@ USAGE - Python 2.7.x or 3.5.x
 
     Read a value:  value = test.Read("tagname")
 	ex: value = test.Read("MyTimer.ACC")
-		    print value
+		    print(value)
 	
     Read an array: value = test.Read("tagname", length)
 	ex: value = test.Read("MyDINT", 10)
-		    print value(3)
+		    print(value(3))
 		    
     Read multiple tags at once: test.MultiRead("tag1", "tag2", "tag3")
 	ex: values = test.MultiRead("MyDINT", "MyTimer.ACC", "AnotherDINT")
 	    print values
+	    
+    You can also read multiple tags now by passing a list of tags to Read()
+    ex: tags = ["MyDint", "AnotherDINT', "ThisREAL"]
+        values = test.Read(tags)
+        print(values)
+    *MultiRead still works, but will probably go away eventually.
 		    
     Write a value: test.Write("tagname", value)
 	ex: test.Write("MyDINT", 1337)
@@ -39,7 +45,7 @@ USAGE - Python 2.7.x or 3.5.x
 	
     Get all Ethernet I/P devices on the network test.Discover()
 	ex:  stuff = test.Discover()
-	     print stuff(1).IPAddress # prints the first devices IP Address
+	     print(stuff(1).IPAddress) # prints the first devices IP Address
 	     
     Get or Set the PLC clock: test.GetPLCTime() or test.SetPLCTime()
     Note:  SetPLCTime() will use your computers clock to set the PLC
